--- a/.github/workflows/dbupdaterepo.yaml
+++ b/.github/workflows/dbupdaterepo.yaml
@@ -7,8 +7,11 @@ jobs:
         uses: actions/setup-python@v2
         with:
           python-version: 3.6
-      - name: Install Databricks CLI run:| python -m pip install --upgrade
-          databricks-cli
+          
+      - name: Install Databricks CLI 
+        run: | 
+          python -m pip install --upgrade databricks-cli
+          
       - name: Remote update Prod Repo
         env:
           DATABRICKS_HOST: ${{ secrets.DATABRICKS_HOST }}
